--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,2 +1,22 @@
-<h1><%= title %></h1>
-<p>Bienvenue sur l'application d'inventaire !</p>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title><%= title %></title>
+    <link rel="stylesheet" href="/css/index.css" />
+  </head>
+  <body>
+    <main class="categories-grid">
+        <header class="hero">
+          <h1>Bienvenue dans InventoryApp</h1>
+          <p>Choisissez une catégorie pour explorer votre inventaire</p>
+        </header>
+      
+        <section class="category-cards">
+        </section>
+
+      </main>
+    </main>
+  </body>
+</html>
