--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,8 +1,9 @@
 <nav class="navbar">
   <div class="navbar-left">
-    <img src="/img/logo.png" alt="Logo" class="navbar-logo" />
+    <a href="/">
+      <img src="/img/logo.png" alt="Logo" class="navbar-logo" />
+    </a>
     <ul class="navbar-menu">
-      <li><a href="/">Home</a></li>
       <li><a href="/about">About</a></li>
     </ul>
   </div>
