add a sript for setup db, and add controller for films and categories and add form/form validation and page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
   <body>
     <main class="categories-grid">
         <header class="hero">
-          <h1>Bienvenue dans InventoryApp</h1>
+          <h1>Welcome to InventoryApp</h1>
           <p>Choisissez une catégorie pour explorer votre inventaire</p>
         </header>
       
