--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -4,6 +4,8 @@
       <img src="/img/logo.png" alt="Logo" class="navbar-logo" />
     </a>
     <ul class="navbar-menu">
+      <li><a href="/films">Films</a></li>
+      <li><a href="/categories">Categories</a></li>
       <li><a href="/about">About</a></li>
     </ul>
   </div>
