--- a/views/films/new.ejs
+++ b/views/films/new.ejs
@@ -1,4 +1,10 @@
+<link
+  href="https://cdn.jsdelivr.net/npm/slim-select@2.7.0/dist/slimselect.css"
+  rel="stylesheet"
+/>
+<script src="https://cdn.jsdelivr.net/npm/slim-select@2.7.0/dist/slimselect.min.js"></script>
 <link rel="stylesheet" href="/css/films.css" />
+<link rel="stylesheet" href="/css/filmsNew.css" />
 
 <div class="container">
   <h1><%= title %></h1>
@@ -20,12 +26,19 @@
     <input type="number" name="stock" placeholder="Stock" />
     <input type="text" name="cover_url" placeholder="Cover URL" />
 
-    <label>Categories:</label>
-    <% categories.forEach(cat => { %>
-    <input type="checkbox" name="categories" value="<%= cat.id %>" /> <%=
-    cat.name %><br />
-    <% }) %>
+    <label for="genres">Genres:</label>
+    <select id="genres" name="genres" multiple>
+      <% genres.forEach(g => { %>
+      <option value="<%= g.id %>"><%= g.name %></option>
+      <% }) %>
+    </select>
 
     <button type="submit">Add film</button>
   </form>
 </div>
+
+<script>
+  new SlimSelect({
+    select: "#genres",
+  });
+</script>
