--- a/views/genres/new.ejs
+++ b/views/genres/new.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/css/categories.css" />
+<link rel="stylesheet" href="/css/genres.css" />
 
 <div class="container">
   <h1><%= title %></h1>
@@ -11,8 +11,8 @@
   </ul>
   <% } %>
 
-  <form action="/categories/new" method="POST">
-    <input type="text" name="name" placeholder="Category name" />
-    <button type="submit">Add category</button>
+  <form action="/genres/new" method="POST">
+    <input type="text" name="name" placeholder="Genre name" />
+    <button type="submit">Add genre</button>
   </form>
 </div>
