--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -5,7 +5,7 @@
     </a>
     <ul class="navbar-menu">
       <li><a href="/films">Films</a></li>
-      <li><a href="/categories">Categories</a></li>
+      <li><a href="/genres">Genres</a></li>
       <li><a href="/about">About</a></li>
     </ul>
   </div>
