--- a/views/genres/list.ejs
+++ b/views/genres/list.ejs
@@ -1,10 +1,8 @@
 <link rel="stylesheet" href="/css/genres.css" />
-
 <div class="container">
   <h1><%= title %></h1>
   <a href="/genres/new" class="button-link">Add a genre</a>
-
-  <ul class="genre-list">
+  <ul class="genre-list genre-grid">
     <% genres.forEach(genre => { %>
     <li class="genre-item">
       <a href="/genres/<%= genre.id %>"><%= genre.name %></a>
