--- a/public/css/films.css
+++ b/public/css/films.css
@@ -1,5 +1,5 @@
 .container {
-  max-width: 900px;
+  max-width: 85%;
   margin: 40px auto;
   padding: 0 20px;
 }
@@ -14,14 +14,26 @@ ul.film-list {
   list-style: none;
   padding: 0;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-  gap: 20px;
+  grid-template-columns: repeat(
+    auto-fill,
+    minmax(180px, 1fr)
+  ); /* Réduction de la taille minimale pour plus de flexibilité */
+  gap: 30px; /* Espacement légèrement réduit */
+}
+
+.film-item {
+  background-color: var(--accent-color);
+  border-radius: var(--border-radius);
+  overflow: hidden; /* Pour masquer ce qui dépasse (comme les coins arrondis) */
+  box-shadow: var(--box-shadow); /* Ombre légère pour le relief */
+  transition: var(--transition);
 }
 
 .film-item img {
   width: 100%;
-  height: 300px;
-  object-fit: cover;
+  height: 250px; /* Réduction de la hauteur pour éviter le zoom excessif */
+  object-fit: cover; /* Garde les proportions, recadre si nécessaire */
+  border-radius: var(--border-radius) var(--border-radius) 0 0; /* Optionnel : arrondir les coins supérieurs */
 }
 
 .film-info {
