style modification for add genres form and film detail

--- a/views/films/new.ejs
+++ b/views/films/new.ejs
@@ -36,6 +36,7 @@
     <button type="submit">Add film</button>
   </form>
 </div>
+<a href="/films" class="button-link">← Back to films</a>
 
 <script>
   new SlimSelect({
