--- a/views/genres/detail.ejs
+++ b/views/genres/detail.ejs
@@ -3,7 +3,7 @@
 
 <div class="container">
   <h1>Films in genre: <%= genre.name %></h1>
-  <a href="/genres" class="button-link">Back to genres</a>
+  <a href="/genres" class="button-link">← Back to genres</a>
 
   <ul class="film-list">
     <% films.forEach(film => { %>
