--- a/public/css/films.css
+++ b/public/css/films.css
@@ -14,26 +14,23 @@ ul.film-list {
   list-style: none;
   padding: 0;
   display: grid;
-  grid-template-columns: repeat(
-    auto-fill,
-    minmax(180px, 1fr)
-  ); /* Réduction de la taille minimale pour plus de flexibilité */
-  gap: 30px; /* Espacement légèrement réduit */
+  grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
+  gap: 30px;
 }
 
 .film-item {
   background-color: var(--accent-color);
   border-radius: var(--border-radius);
-  overflow: hidden; /* Pour masquer ce qui dépasse (comme les coins arrondis) */
-  box-shadow: var(--box-shadow); /* Ombre légère pour le relief */
+  overflow: hidden;
+  box-shadow: var(--box-shadow);
   transition: var(--transition);
 }
 
 .film-item img {
   width: 100%;
-  height: 250px; /* Réduction de la hauteur pour éviter le zoom excessif */
-  object-fit: cover; /* Garde les proportions, recadre si nécessaire */
-  border-radius: var(--border-radius) var(--border-radius) 0 0; /* Optionnel : arrondir les coins supérieurs */
+  height: 250px;
+  object-fit: cover;
+  border-radius: var(--border-radius) var(--border-radius) 0 0;
 }
 
 .film-info {
