--- a/public/css/filmsDetail.css
+++ b/public/css/filmsDetail.css
@@ -102,9 +102,14 @@
   color: var(--primary-color);
 }
 
+.back-buttons {
+  display: flex;
+  gap: 1rem;
+  margin-top: 1rem;
+}
+
 .back-button {
   display: inline-block;
-  margin-top: 1rem;
   padding: 10px 20px;
   background-color: var(--secondary-color);
   color: var(--primary-color);
@@ -114,7 +119,6 @@
   transition: var(--transition);
   border: none;
   cursor: pointer;
-  align-self: flex-start;
 }
 
 .back-button:hover {
