--- a/views/films/detail.ejs
+++ b/views/films/detail.ejs
@@ -40,7 +40,10 @@
         <% }) %>
       </div>
 
-      <a href="/films" class="back-button">Back to Films</a>
+      <div class="back-buttons">
+        <a href="/films" class="back-button">← Back to Films</a>
+        <a href="/genres" class="back-button">← Back to Genres</a>
+      </div>
     </div>
   </div>
 </div>
