--- a/public/css/filmsDetail.css
+++ b/public/css/filmsDetail.css
@@ -86,7 +86,7 @@
 }
 
 .genre-tag {
-  background-color: var(--accent-color);
+  background-color: var(--secondary-color);
   color: var(--primary-color);
   padding: 4px 10px;
   border-radius: 20px;
@@ -98,7 +98,7 @@
 }
 
 .genre-tag:hover {
-  background-color: var(--secondary-color);
+  background-color: var(--secondary-hover);
   color: var(--primary-color);
 }
 
