--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -4,14 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/png" href="/img/logo.png" />
-    <title>Inventory app</title>
-    <link rel="stylesheet" href="/css/global.css" />
+    <title><%= title || 'Cine Inventory App' %></title>
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Playfair+Display:wght@600;700&family=Poppins:wght@400;500;600&display=swap"
       rel="stylesheet"
     />
+
+    <link rel="stylesheet" href="/css/global.css" />
   </head>
   <body>
     <%- include('partials/navbar.ejs') %>
