--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,5 @@
 <footer class="footer">
-  <p>Inventory App | Pierre Gronnier</p>
+  <p>Cine Inventory App | Pierre Gronnier</p>
   <a href="https://github.com/PierreGronnier" target="_blank">
     <img src="/img/github.png" alt="GitHub Logo" class="footer-logo" />
   </a>
