--- a/public/css/filmsDetail.css
+++ b/public/css/filmsDetail.css
@@ -6,6 +6,7 @@
   background-color: white;
   border-radius: var(--border-radius);
   box-shadow: var(--box-shadow);
+  border: 3px solid var(--secondary-hover);
 }
 
 .film-header {
