add edit possibily, change the style in films and in genres

--- a/public/css/filmsNew.css
+++ b/public/css/filmsNew.css
@@ -14,17 +14,27 @@
 
 .container ul {
   list-style: none;
-  padding: 0;
+  padding: 0.5rem;
   margin: 0.5rem 0;
   background-color: rgba(255, 0, 0, 0.1);
   border-radius: var(--border-radius);
-  padding: 0.5rem;
 }
 
 form {
   display: flex;
   flex-direction: column;
-  gap: 0.8rem;
+}
+
+.form-group {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 0.8rem;
+}
+
+form label {
+  font-weight: 500;
+  color: var(--primary-color);
+  margin-bottom: 0.2rem;
 }
 
 form input,
@@ -41,12 +51,6 @@ form select {
 form textarea {
   min-height: 100px;
   resize: vertical;
-}
-
-form label {
-  font-weight: 500;
-  color: var(--primary-color);
-  margin-bottom: 0.3rem;
 }
 
 form button {
