--- a/views/films/new.ejs
+++ b/views/films/new.ejs
@@ -9,33 +9,66 @@
 <div class="container">
   <h1><%= title %></h1>
 
-  <% if (errors.length > 0) { %>
-  <ul style="color: red">
-    <% errors.forEach(e => { %>
-    <li><%= e.msg %></li>
-    <% }) %>
-  </ul>
+  <% if (errors && errors.length > 0) { %>
+    <ul style="color: red">
+      <% errors.forEach(e => { %>
+        <li><%= e.msg %></li>
+      <% }) %>
+    </ul>
   <% } %>
 
-  <form action="/films/new" method="POST">
-    <input type="text" name="title" placeholder="Title" />
-    <textarea name="description" placeholder="Description"></textarea>
-    <input type="number" name="release_year" placeholder="Release year" />
-    <input type="text" name="director" placeholder="Director" />
-    <input type="number" step="0.01" name="price" placeholder="Price" />
-    <input type="number" name="stock" placeholder="Stock" />
-    <input type="text" name="cover_url" placeholder="Cover URL" />
+  <form action="<%= editMode ? '/films/' + film.id + '/edit' : '/films/new' %>" method="POST">
 
-    <label for="genres">Genres:</label>
-    <select id="genres" name="genres" multiple>
-      <% genres.forEach(g => { %>
-      <option value="<%= g.id %>"><%= g.name %></option>
-      <% }) %>
-    </select>
+    <div class="form-group">
+      <label for="title">Title:</label>
+      <input type="text" id="title" name="title" placeholder="Title" value="<%= film ? film.title : '' %>"/>
+    </div>
 
-    <button type="submit">Add film</button>
+    <div class="form-group">
+      <label for="description">Description:</label>
+      <textarea id="description" name="description" placeholder="Description"><%= film ? film.description : '' %></textarea>
+    </div>
+
+    <div class="form-group">
+      <label for="release_year">Release year:</label>
+      <input type="number" id="release_year" name="release_year" placeholder="Release year" value="<%= film ? film.release_year : '' %>"/>
+    </div>
+
+    <div class="form-group">
+      <label for="director">Director:</label>
+      <input type="text" id="director" name="director" placeholder="Director" value="<%= film ? film.director : '' %>"/>
+    </div>
+
+    <div class="form-group">
+      <label for="price">Price:</label>
+      <input type="number" id="price" step="0.01" name="price" placeholder="Price" value="<%= film ? film.price : '' %>"/>
+    </div>
+
+    <div class="form-group">
+      <label for="stock">Stock:</label>
+      <input type="number" id="stock" name="stock" placeholder="Stock" value="<%= film ? film.stock : '' %>"/>
+    </div>
+
+    <div class="form-group">
+      <label for="cover_url">Cover URL:</label>
+      <input type="text" id="cover_url" name="cover_url" placeholder="Cover URL" value="<%= film ? film.cover_url : '' %>"/>
+    </div>
+
+    <div class="form-group">
+      <label for="genres">Genres:</label>
+      <select id="genres" name="genres" multiple>
+        <% genres.forEach(g => { %>
+          <option value="<%= g.id %>" <%= film && film.genres && film.genres.includes(g.name) ? 'selected' : '' %>>
+            <%= g.name %>
+          </option>
+        <% }) %>
+      </select>
+    </div>
+
+    <button type="submit"><%= editMode ? 'Save changes' : 'Add film' %></button>
   </form>
 </div>
+
 <a href="/films" class="button-link">← Back to films</a>
 
 <script>
