--- a/views/genres/new.ejs
+++ b/views/genres/new.ejs
@@ -10,7 +10,7 @@
   <% } %>
   <form action="/genres/new" method="POST">
     <input type="text" name="name" placeholder="Genre name" />
-    <button type="submit">Add genre</button>
+    <button type="submit">Add</button>
   </form>
 </div>
 <a href="/genres" class="button-link">← Back to genres</a>
