--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -6,6 +6,7 @@
     <ul class="navbar-menu">
       <li><a href="/films">Films</a></li>
       <li><a href="/genres">Genres</a></li>
+      <li><a href="/search">Search</a></li>
       <li><a href="/about">About</a></li>
     </ul>
   </div>
