--- a/views/index.ejs
+++ b/views/index.ejs
@@ -36,7 +36,7 @@
         <div class="card-icon">❓</div>
         <div class="card-border-top genre-border"></div>
         <h2>About This Project</h2>
-        <p>How and why I created this small cinema inventory app.</p>
+        <p>How and why I created this small inventory app.</p>
       </a>
     </section>
   </main>
