--- a/views/about.ejs
+++ b/views/about.ejs
@@ -4,7 +4,7 @@
 <main class="about-container">
   <header class="about-hero">
     <h1>About Cine Inventory App</h1>
-    <p>How and why did I make this small app</p>
+    <p>How and why I created this app, and what it does.</p>
   </header>
 
   <section class="about-content">
@@ -31,10 +31,40 @@
         items and categories.
       </p>
       <p>
-        This project helped solidify my understanding of
+        This project helped me strengthen my skills in
         <strong>Node.js</strong>, <strong>Express</strong>,
         <strong>EJS templating</strong>, and <strong>PostgreSQL</strong> for
         database management.
+      </p>
+    </div>
+
+    <div class="main-features">
+      <h2>Main Features</h2>
+      <p>
+        The application includes three main pages, each designed to manage
+        different aspects of the movie inventory:
+      </p>
+      <ul class="feature-list">
+        <li>
+          🎬 <strong>Movies Page:</strong> View all movies in the inventory, add
+          a new movie, or modify/delete existing ones.
+        </li>
+        <li>
+          🏷️ <strong>Genres Page:</strong> Manage genre tags associated with
+          films. Users can create or delete genres, and view all films linked to
+          a specific genre. Deleting a genre automatically removes it from all
+          associated movies.
+        </li>
+        <li>
+          🔍 <strong>Search Page:</strong> Search for movies based on various
+          criteria such as title, director name, genre, or release year etc.
+        </li>
+      </ul>
+      <br />
+      <p>
+        Additionally, from any of these pages, users can click on a movie to
+        view detailed information, including all related data, and make changes
+        or delete it if needed.
       </p>
     </div>
 
