--- a/views/index.ejs
+++ b/views/index.ejs
@@ -35,8 +35,8 @@
       <a href="/about" class="category-card">
         <div class="card-icon">❓</div>
         <div class="card-border-top genre-border"></div>
-        <h2>About This Project</h2>
-        <p>How and why I created this small inventory app.</p>
+        <h2>About</h2>
+        <p>Discover how I built this app and what it offers.</p>
       </a>
     </section>
   </main>
