--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -41,15 +41,14 @@
   border-radius: var(--border-radius);
   transition: var(--transition);
   position: relative;
-  overflow: hidden;
 }
 
 .navbar-menu li a::after {
   content: "";
   position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
+  bottom: 4px;
+  left: 10%;
+  width: 80%;
   height: 2px;
   background-color: var(--secondary-color);
   transform: scaleX(0);
