--- a/views/films/detail.ejs
+++ b/views/films/detail.ejs
@@ -44,6 +44,15 @@
         <a href="/films" class="back-button">← Back to Films</a>
         <a href="/genres" class="back-button">← Back to Genres</a>
       </div>
+
+      <div class="film-actions">
+        <a href="/films/<%= film.id %>/edit" class="action-icon edit">
+          <img src="/img/edit-icon.png" alt="Edit" />
+        </a>
+        <a href="/films/<%= film.id %>/delete" class="action-icon delete">
+          <img src="/img/delete-icon.png" alt="Delete" />
+        </a>
+      </div>
     </div>
   </div>
 </div>
