--- a/views/films/new.ejs
+++ b/views/films/new.ejs
@@ -65,6 +65,11 @@
       </select>
     </div>
 
+    <div class="form-group">
+      <label for="adminPassword">Admin Password:</label>
+      <input type="password" id="adminPassword" name="adminPassword" placeholder="Enter admin password" required />
+    </div>
+
     <button type="submit"><%= editMode ? 'Save changes' : 'Add film' %></button>
   </form>
 </div>
