--- a/views/genres/delete-list.ejs
+++ b/views/genres/delete-list.ejs
@@ -1,5 +1,7 @@
 <link rel="stylesheet" href="/css/genres-delete.css" />
-
+<% if (typeof flash !== 'undefined' && flash) { %>
+<div class="flash <%= flash.type %>"><%= flash.message %></div>
+<% } %>
 <div class="container delete-page">
   <h1>Delete a Genre</h1>
   <a href="/genres" class="back-btn button-link">← Back to genres list</a>
