--- a/views/genres/list.ejs
+++ b/views/genres/list.ejs
@@ -1,4 +1,7 @@
 <link rel="stylesheet" href="/css/genres.css" />
+<% if (typeof flash !== 'undefined' && flash) { %>
+<div class="flash <%= flash.type %>"><%= flash.message %></div>
+<% } %>
 <div class="container">
   <h1><%= title %></h1>
   <div class="genre-action-group">
@@ -13,3 +16,15 @@
     <% }) %>
   </ul>
 </div>
+
+<script>
+  document.addEventListener("DOMContentLoaded", () => {
+    const flash = document.querySelector(".flash");
+    if (flash) {
+      setTimeout(() => {
+        flash.classList.add("hide");
+        setTimeout(() => flash.remove(), 600);
+      }, 3000);
+    }
+  });
+</script>
